fixed form lables, contact links and link contrast on contact page

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ img{
     color: rgba(0, 0, 0, .7);
 }
 
-.d-bloc .panel icon {
+.d-bloc .panel {
     border-color: rgba(0, 0, 0, .7);
 }
 
@@ -293,7 +293,6 @@ img{
     height: auto;
     padding: 3px 15px;
     font-size: 25px;
-    font-weight: normal;
     font-weight: 600;
     line-height: 44px;
 }
@@ -335,7 +334,7 @@ img{
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
-    border: 0px;
+    border: 0;
 }
 
 .navbar-toggle:hover {
@@ -390,7 +389,7 @@ img{
         position: relative;
         width: 100%;
         right: 0;
-        margin-right: 0px;
+        margin-right: 0;
         margin-top: 20px;
     }
     .nav-center.mini-nav .navbar-toggle {
@@ -423,10 +422,8 @@ nav .caret {
 }
 
 .dropdown-menu .dropdown span {
-    border: 4px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
+    border: 4px solid transparent;
+    border-left-color: black;
     margin: 6px -5px 0 0!important;
     float: right;
 }
@@ -534,7 +531,7 @@ a[data-lightbox] {
 
 a[data-lightbox]:hover::before {
     content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, sans-serif;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -655,7 +652,7 @@ p,
 label,
 .btn,
 a {
-    font-family: "helvetica";
+    font-family: "helvetica", sans-serif;
     font-weight: 400;
     color: #575757!important;
 }
@@ -675,6 +672,22 @@ a {
 strong {
     font-weight: bold;
     color: black;
+}
+
+.contacts__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.contacts__list li {
+    padding-bottom: 2rem ;
+}
+
+.contacts__link {
+    color: black !important;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 .statement-bloc-text {
@@ -709,7 +722,7 @@ strong {
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
 }
 
 .icons {
@@ -776,7 +789,7 @@ strong {
 }
 
 .avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.3);
 }
 
 .black-background {
@@ -835,7 +848,17 @@ h3.text-uppercase {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: black !important;
+    font-weight: bold;
+    text-decoration: underline;
+    background-color: #F3976C;
+    padding: 0 1rem;
+}
+
+.ltc-atomic-tangerine:hover {
+    color: black !important;
+    font-weight: bold;
+    background-color: rgba(243, 151, 108, 0.93);
 }
 
 .review {
@@ -982,10 +1005,8 @@ h3.text-uppercase {
     .dropdown .dropdown a .caret {
         float: none;
         margin: 5px 0 0 10px!important;
-        border: 4px solid black;
-        border-bottom-color: transparent;
-        border-right-color: transparent;
-        border-left-color: transparent;
+        border: 4px solid transparent;
+        border-top-color: black;
     }
     #hero-bloc .navbar .nav {
         background: rgba(0, 0, 0, .8);
